--- a/21_Mache4/index.html
+++ b/21_Mache4/index.html
@@ -1,89 +1,139 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mache</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/the-new-css-reset/css/reset.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mache</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/the-new-css-reset/css/reset.min.css"
+    />
 
-  <!-- アイコンフォント -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <!-- アイコンフォント -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
 
-  <!-- Webフォント -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+    <!-- Webフォント -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <header>
-    <div class="inner">
-      <h1><a href="#"><img src="./images/img_logo.png" alt="Mache"></a></h1>
-      <nav>
-        <ul>
-          <li><a class="active" href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Prices</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-      <i class="fa-solid fa-bars"></i>
-    </div>
-  </header>
-
-  <main>
-    <section class="about">
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <header>
       <div class="inner">
-        <h2><span>MACHE</span> FREE PSD TEMPLATE</h2>
-        <p>Elegant and clean PSD template, which you can download and use for free!<br>
-        You can easily modify the design to make it your own and help you get your project running faster.</p>
-        <a class="btn" href="#"><span>SHOW MORE</span></a>
+        <h1>
+          <a href="#"><img src="./images/img_logo.png" alt="Mache" /></a>
+        </h1>
+        <nav>
+          <ul>
+            <li><a class="active" href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Prices</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <i class="fa-solid fa-bars"></i>
       </div>
-    </section>
+    </header>
 
-    <section class="updates">
-      <div class="inner">
-        <h2>Our Latest Updates</h2>
-        <div class="postall">
-          <article>
-            <div class="pic">
-              <img src="./images/pic_updates01.png" alt="">
-            </div>
-            <div class="content">
-              <h3>LOREM IPSUMA DOLOR SIT</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et.</p>
-            </div>
-          </article>
-
-          <article>
-            <div class="pic hot">
-              <img src="./images/pic_updates02.png" alt="">
-            </div>
-            <div class="content">
-              <h3>LOREM IPSUMA DOLOR SIT</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et.</p>
-            </div>
-          </article>
-
-          <article>
-            <div class="pic">
-              <img src="./images/pic_updates03.png" alt="">
-            </div>
-            <div class="content">
-              <h3>LOREM IPSUMA DOLOR SIT</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et.</p>
-            </div>
-          </article>
+    <main>
+      <section class="about">
+        <div class="inner">
+          <h2><span>MACHE</span> FREE PSD TEMPLATE</h2>
+          <p>
+            Elegant and clean PSD template, which you can download and use for
+            free!<br />
+            You can easily modify the design to make it your own and help you
+            get your project running faster.
+          </p>
+          <a class="btn" href="#"><span>SHOW MORE</span></a>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
 
-  <footer>
-    <div class="inner">
-      <small>&copy; 2015 COPYRIGHT MACHE TEMPLATE</small>
-    </div>
-  </footer>
-</body>
+      <section class="updates">
+        <div class="inner">
+          <h2>Our Latest Updates</h2>
+          <div class="postall">
+            <article>
+              <div class="pic">
+                <img src="./images/pic_updates01.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>LOREM IPSUMA DOLOR SIT</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod
+                  tempor incididunt ut labore et.
+                </p>
+              </div>
+            </article>
+
+            <article>
+              <div class="pic hot">
+                <img src="./images/pic_updates02.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>LOREM IPSUMA DOLOR SIT</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod
+                  tempor incididunt ut labore et.
+                </p>
+              </div>
+            </article>
+
+            <article>
+              <div class="pic">
+                <img src="./images/pic_updates03.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>LOREM IPSUMA DOLOR SIT</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod
+                  tempor incididunt ut labore et.
+                </p>
+              </div>
+            </article>
+
+            <article>
+              <div class="pic">
+                <img src="./images/pic_updates03.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>LOREM IPSUMA DOLOR SIT</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod
+                  tempor incididunt ut labore et.
+                </p>
+              </div>
+            </article>
+
+            <article>
+              <div class="pic">
+                <img src="./images/pic_updates03.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>LOREM IPSUMA DOLOR SIT</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod
+                  tempor incididunt ut labore et.
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="inner">
+        <small>&copy; 2015 COPYRIGHT MACHE TEMPLATE</small>
+      </div>
+    </footer>
+  </body>
 </html>
