--- a/21_Mache4/index.html
+++ b/21_Mache4/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mache</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/the-new-css-reset/css/reset.min.css"
-    />
+    /> -->
 
     <!-- アイコンフォント -->
     <link
@@ -127,6 +127,17 @@
             </article>
           </div>
         </div>
+      </section>
+
+      <section class="contact">
+        <form>
+          <div>
+            <label><input type="checkbox" name="gender">男性</label>
+            <label><input type="checkbox" name="gender">女性</label>
+          </div>
+          <input type="submit" value="送信する">
+          <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
       </section>
     </main>
 
