--- a/21_Mache4/index.html
+++ b/21_Mache4/index.html
@@ -132,6 +132,22 @@
       <section class="contact">
         <form>
           <div>
+            <label for="text">名前</label><br>
+            <input type="text" id="text" placeholder="漢字で記入ください">
+          </div>
+          <div>
+            お問い合わせ内容<br>
+            <textarea cols="50" rows="10"></textarea>
+          </div>
+          <div>
+            <select>
+              <option>カテゴリーを選択</option>
+              <option>黄色</option>
+              <option>赤</option>
+              <option>青</option>
+            </select>
+          </div>
+          <div>
             <label><input type="checkbox" name="gender">男性</label>
             <label><input type="checkbox" name="gender">女性</label>
           </div>
